app/media-server/calibre/calibre-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibre
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: calibre
    spec:
      containers:
        - name: calibre
          image: linuxserver/calibre-web
          imagePullPolicy: Always
          ports:
            - name: "http-port"
              containerPort: 8083
              protocol: TCP
          volumeMounts:
            - name: calibre-config
              mountPath: /config
            - name: calibre-books
              mountPath: /books
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '512Mi'
              cpu: '1000m'
      volumes:
        - name: calibre-config
          persistentVolumeClaim:
            claimName: calibre-config
        - name: calibre-books
          persistentVolumeClaim:
            claimName: calibre-books
