app/media-server/calibre/calibre-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: calibre
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8083
  selector:
    app: calibre
  type: LoadBalancer
  # if type: LoadBalancer is enabled than comment out INGRESS section below
status:
  loadBalancer: {}
